[gd_scene load_steps=12 format=4 uid="uid://60v8ngif5r60"]

[ext_resource type="Script" path="res://src/screens/level_script.gd" id="1_tbx11"]
[ext_resource type="PackedScene" uid="uid://cxejbdbge3gg7" path="res://scenes/entitities/objects/rotateable_object_platform.tscn" id="2_7kl1c"]
[ext_resource type="TileSet" uid="uid://cqhd4f7drrt7s" path="res://tilesets/mainTileSet.tres" id="2_jps58"]
[ext_resource type="PackedScene" uid="uid://q0w4io34wy7m" path="res://scenes/entitities/objects/goal.tscn" id="3_ktvul"]
[ext_resource type="PackedScene" uid="uid://bnjs0xujgfe0i" path="res://scenes/entitities/player/player.tscn" id="4_lrn0a"]
[ext_resource type="AudioStream" uid="uid://sa00j8rywwpl" path="res://assets/sfx/goal_hit.wav" id="6_hide0"]
[ext_resource type="AudioStream" uid="uid://c4u0rsu7b5et1" path="res://assets/sfx/goal_leave.wav" id="7_ptr4y"]
[ext_resource type="AudioStream" uid="uid://dwucxo84etnhg" path="res://assets/sfx/level_win.wav" id="8_7l7hh"]
[ext_resource type="AudioStream" uid="uid://cisy5gjqxknq6" path="res://assets/sfx/lose_a_life.wav" id="9_5qh7t"]
[ext_resource type="AudioStream" uid="uid://6wryhecrqwso" path="res://assets/sfx/whacked.wav" id="10_ufqs0"]
[ext_resource type="PackedScene" uid="uid://g85syb8mnxe" path="res://scenes/entitities/Pitfall.tscn" id="11_hfmx7"]

[node name="Level1-3" type="Node2D"]
process_mode = 1
script = ExtResource("1_tbx11")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQADAAIAAAAAAAEAAQADAAIAAAAAAAIAAQADAAIAAAAAAAMAAQADAAIAAAAAAAQAAQADAAIAAAAAAAUAAQADAAIAAAAAAAYAAQADAAIAAAAAAAcAAQADAAIAAAAAAAgAAQADAAIAAAAAAAkAAQADAAIAAAAAAAoAAQADAAIAAAAAAAsAAQADAAIAAAAAAAwAAQADAAIAAAAAAA0AAQADAAIAAAAAAA4AAQADAAIAAAAAAA8AAgADAAIAAAAAABAAAgAIAAAAAAAAABEAAgAIAAEAAAAAABIAAgAIAAAAAAAAABMAAgAIAAEAAAAAABQAAgAIAAAAAAAAABUAAgAIAAEAAAAAABYAAgAIAAAAAAAAABcAAgAIAAEAAAAAABgAAgAIAAAAAAAAABkAAgAIAAEAAAAAABoAAgAIAAAAAAAAABsAAgAIAAEAAAAAABwAAgAIAAAAAAAAAB0AAgAIAAEAAAAAAB4AAgAIAAAAAAAAAB8AAgAIAAEAAAAAACAAAgAIAAAAAAAAACEAAgAIAAEAAAAlACEAAgADAAIAAAAmACEAAQADAAIAAAArACEAAQAGAAEAAAAsACEAAQAHAAEAAAAtACEAAQAGAAEAAAAuACEAAQAHAAEAAAAvACEAAQAGAAEAAAAwACEAAQAHAAEAAAAxACEAAQAGAAEAAAAyACEAAQAHAAEAAAA7ACEAAQAIAAAAAAA7ACAAAQAIAAEAAAA7AB8AAQAIAAAAAAA7AB4AAQAIAAEAAAA7AB0AAQAIAAAAAAA7ABwAAQAIAAEAAAA7ABsAAQAIAAAAAAA7ABoAAQAIAAEAAAA7ABkAAQAIAAAAAAA7ABgAAQAIAAEAAAA7ABcAAQAIAAAAAAA7ABYAAQAIAAEAAAA7ABUAAQAIAAAAAAA7ABQAAQAIAAEAAAA7ABMAAQAIAAAAAAA7ABIAAQAIAAEAAAA7ABEAAQAIAAAAAAA7ABAAAQAIAAEAAAA7AA8AAQAIAAAAAAA7AA4AAQAIAAEAAAA7AA0AAQAIAAAAAAA7AAwAAQAIAAEAAAA7AAsAAQAIAAAAAAA7AAoAAQAIAAEAAAA7AAkAAQAIAAAAAAA7AAgAAQAIAAEAAAA7AAcAAQAIAAAAAAA7AAYAAQAIAAEAAAA7AAUAAQAIAAAAAAA7AAQAAQAIAAEAAAA7AAMAAQAIAAAAAAA7AAIAAQAIAAEAAAA7AAEAAQAIAAAAAAA7AAAAAQADAAIAAAA8AAAAAQADAAIAAAA8AAEAAQAJAAAAAAA8AAIAAQAJAAEAAAA8AAMAAQAJAAAAAAA8AAQAAQAJAAEAAAA8AAUAAQAJAAAAAAA8AAYAAQAJAAEAAAA8AAcAAQAJAAAAAAA8AAgAAQAJAAEAAAA8AAkAAQAJAAAAAAA8AAoAAQAJAAEAAAA8AAsAAQAJAAAAAAA8AAwAAQAJAAEAAAA8AA0AAQAJAAAAAAA8AA4AAQAJAAEAAAA8AA8AAQAJAAAAAAA8ABAAAQAJAAEAAAA8ABEAAQAJAAAAAAA8ABIAAQAJAAEAAAA8ABMAAQAJAAAAAAA8ABQAAQAJAAEAAAA8ABUAAQAJAAAAAAA8ABYAAQAJAAEAAAA8ABcAAQAJAAAAAAA8ABgAAQAJAAEAAAA8ABkAAQAJAAAAAAA8ABoAAQAJAAEAAAA8ABsAAQAJAAAAAAA8ABwAAQAJAAEAAAA8AB0AAQAJAAAAAAA8AB4AAQAJAAEAAAA8AB8AAQAJAAAAAAA8ACAAAQAJAAEAAAA8ACEAAQAJAAAAAAAmABEAAQADAAIAAAAmABIAAQADAAIAAAAmABMAAQADAAIAAAAmABQAAQADAAIAAAAmABUAAQADAAIAAAAmABYAAQADAAIAAAAmABcAAQADAAIAAAAmABgAAQADAAIAAAAmABkAAQADAAIAAAAmABoAAQADAAIAAAAmABsAAQADAAIAAAAmABwAAQADAAIAAAAmAB0AAQADAAIAAAAmAB4AAQADAAIAAAAmAB8AAQADAAIAAAAmACAAAQADAAIAAAAlACAAAgADAAIAAAAlAB8AAgADAAIAAAAlAB4AAgADAAIAAAAlAB0AAgADAAIAAAAlABwAAgADAAIAAAAlABsAAgADAAIAAAAlABoAAgADAAIAAAAlABkAAgADAAIAAAAlABgAAgADAAIAAAAlABcAAgADAAIAAAAlABYAAgADAAIAAAAlABUAAgADAAIAAAAlABQAAgADAAIAAAAlABMAAgADAAIAAAAlABIAAgADAAIAAAAlABEAAgADAAIAAAAEAB0AAgAGAAEAAAAEAB4AAgAEAAIAAAAEAB8AAgAEAAMAAAAFAB0AAgAHAAEAAAAFAB4AAgAFAAIAAAAFAB8AAgAFAAMAAAAGAB8AAgAGAAMAAAAHAB8AAgAHAAMAAAAIABkAAgAAAAUAAAAIAB8AAgAGAAMAAAAJABkAAgACAAUAAAAJAB8AAgAHAAMAAAAKAB8AAgAGAAMAAAALAB8AAgAHAAMAAAAMAB8AAgAGAAMAAAANAB8AAgAHAAMAAAAOAB8AAgAGAAMAAAAPAB8AAgAHAAMAAAAQAB8AAgAGAAMAAAARAB0AAgAGAAEAAAARAB4AAgAHAAIAAAARAB8AAgAHAAMAAAASAB0AAgAHAAEAAAASAB4AAgAGAAIAAAASAB8AAgAGAAMAAAATABsAAgAIAAEAAAATABwAAgAGAAAAAAATAB0AAgAGAAEAAAATAB4AAgAHAAIAAAATAB8AAgAHAAMAAAAUABsAAgAJAAEAAAAUABwAAgAHAAAAAAAUAB0AAgAHAAEAAAAUAB4AAgAGAAIAAAAUAB8AAgAGAAMAAAAVAB0AAgAGAAEAAAAVAB4AAgAHAAIAAAAVAB8AAgAHAAMAAAAWAB0AAgAHAAEAAAAWAB4AAgAGAAIAAAAWAB8AAgAGAAMAAAAXAB8AAgAHAAMAAAAYAB8AAgAGAAMAAAAZAB8AAgAHAAMAAAAaAB8AAgAGAAMAAAAbAB8AAgAHAAMAAAAcAB8AAgAGAAMAAAAdAB8AAgAHAAMAAAAeABkAAgAAAAUAAAAeAB8AAgAGAAMAAAAfABkAAgACAAUAAAAfAB8AAgAHAAMAAAAgAB8AAgAIAAMAAAAhAB4AAgAJAAIAAAAhAB8AAgAJAAMAAAABABYAAgAJAAAAAAACABYAAgAAAAIAAAADABYAAgABAAIAAAAEABYAAgACAAIAAAAEABwAAgAGAAAAAAAFABwAAgAHAAAAAAAGAB4AAgAGAAIAAAAHAB4AAgAHAAIAAAAIABMAAgAAAAIAAAAIABgAAgAAAAMAAAAIAB4AAgAGAAIAAAAJABMAAgABAAIAAAAJABgAAgACAAMAAAAJAB4AAgAHAAIAAAAKABMAAgABAAIAAAAKAB4AAgAGAAIAAAALABMAAgABAAIAAAALABkAAgAAAAIAAAALAB4AAgAHAAIAAAAMABMAAgABAAIAAAAMABkAAgABAAIAAAAMAB4AAgAGAAIAAAANABMAAgABAAIAAAANABkAAgABAAIAAAANAB4AAgAHAAIAAAAOABMAAgACAAIAAAAOABkAAgACAAIAAAAOAB4AAgAGAAIAAAAPAB4AAgAHAAIAAAAQAB4AAgAGAAIAAAARABwAAgAGAAAAAAASABwAAgAHAAAAAAATABoAAgAIAAAAAAAUABoAAgAJAAAAAAAVABwAAgAGAAAAAAAWABwAAgAHAAAAAAAXAB4AAgAHAAIAAAAYAB4AAgAGAAIAAAAZABMAAgAAAAIAAAAZABkAAgAAAAIAAAAZAB4AAgAHAAIAAAAaABMAAgABAAIAAAAaABkAAgABAAIAAAAaAB4AAgAGAAIAAAAbABMAAgABAAIAAAAbABkAAgABAAIAAAAbAB4AAgAHAAIAAAAcABMAAgABAAIAAAAcABkAAgACAAIAAAAcAB4AAgAGAAIAAAAdABMAAgABAAIAAAAdAB4AAgAHAAIAAAAeABMAAgABAAIAAAAeABgAAgAAAAMAAAAeAB4AAgAGAAIAAAAfABMAAgACAAIAAAAfABgAAgACAAMAAAAfAB4AAgAHAAIAAAAgAB4AAgAIAAIAAAAiABYAAgAAAAIAAAAjABYAAgABAAIAAAAkABYAAgACAAIAAAAtABoAAQAAAAIAAAAuAAwAAQAGAAAAAAAuAA0AAQAGAAEAAAAvAAwAAQAHAAAAAAAvAA0AAQAHAAEAAAA3ABsAAQAAAAEAAAA4ABsAAQABAAEAAAA5ABsAAQACAAEAAAA6ABsAAQADAAEAAAAuABoAAQABAAIAAAAvABoAAQABAAIAAAAwABMAAQAAAAMAAAAwABoAAQABAAIAAAAxAAsAAQAAAAIAAAAxABMAAQACAAMAAAAxABoAAQABAAIAAAAyAAsAAQABAAIAAAAyABoAAQACAAIAAAAzAAsAAQABAAIAAAA0AAsAAQACAAIAAAA1ABAAAQAAAAIAAAA1AB0AAQAAAAIAAAA2ABAAAQACAAIAAAA2AB0AAQACAAIAAAA3ABoAAQAAAAAAAAA4ABoAAQABAAAAAAA5AA0AAQAAAAIAAAA5ABoAAQACAAAAAAA6AA0AAQACAAIAAAA6ABoAAQADAAAAAAABAAcAAQAAAAAAAAABAA4AAQADAAIAAAACAAcAAQABAAAAAAACAA4AAQADAAIAAAADAAcAAQACAAAAAAADAA4AAQADAAIAAAAEAAcAAQADAAAAAAAEAA4AAQADAAIAAAAFAAcAAQAEAAAAAAAFAA4AAQADAAIAAAAGAAcAAQAFAAAAAAAGAA4AAQADAAIAAAAHAA4AAQADAAIAAAAIAA4AAQADAAIAAAAJAAwAAQAGAAAAAAAJAA0AAQAGAAEAAAAJAA4AAQADAAIAAAAKAAwAAQAHAAAAAAAKAA0AAQAHAAEAAAAKAA4AAQADAAIAAAALAA4AAQADAAIAAAAMAA4AAQADAAIAAAANAA4AAQADAAIAAAAOAA4AAQADAAIAAAAPAA4AAQADAAIAAAAQAA4AAQADAAIAAAARAA4AAQADAAIAAAASAA4AAQADAAIAAAATAA4AAQADAAIAAAAUAA4AAQADAAIAAAAVAA4AAQADAAIAAAAWAA4AAQADAAIAAAAXAA4AAQADAAIAAAAYAA4AAQADAAIAAAAZAA4AAQADAAIAAAAaAA4AAQADAAIAAAAbAA4AAQADAAIAAAAcAA4AAQADAAIAAAAdAA4AAQADAAIAAAAeAA4AAQADAAIAAAAfAA4AAQADAAIAAAAgAA4AAQADAAIAAAAhAA4AAQADAAIAAAAiAA4AAQADAAIAAAAjAA4AAQADAAIAAAAkAA4AAQADAAIAAAAlAA4AAQADAAIAAAAlAA8AAgADAAIAAAAlABAAAgADAAIAAAAmAA4AAQADAAIAAAAmAA8AAQADAAIAAAAmABAAAQADAAIAAAAnAAwAAQAAAAMAAAAnAA0AAQAAAAQAAAAnAA4AAQAAAAQAAAAoAAwAAQABAAMAAAAoAA0AAQABAAQAAAAoAA4AAQADAAQAAAApAAwAAQACAAMAAAApAA0AAQACAAQAAAApAA4AAQACAAQAAAABAAgAAQAAAAEAAAABAA8AAgADAAIAAAACAAgAAQABAAEAAAACAA8AAgADAAIAAAADAAgAAQACAAEAAAADAA8AAgADAAIAAAAEAAgAAQADAAEAAAAEAA8AAgADAAIAAAAFAAgAAQAEAAEAAAAFAA8AAgADAAIAAAAGAAgAAQAFAAEAAAAGAA8AAgADAAIAAAAHAA8AAgADAAIAAAAIAA8AAgADAAIAAAAJAA8AAgADAAIAAAAKAA8AAgADAAIAAAALAA8AAgADAAIAAAAMAAQAAQAAAAAAAAAMAA8AAgADAAIAAAANAAQAAQABAAAAAAANAA8AAgADAAIAAAAOAAQAAQACAAAAAAAOAA8AAgADAAIAAAAPAAQAAQADAAAAAAAPAA8AAgADAAIAAAAQAAQAAQAEAAAAAAAQAA8AAgADAAIAAAARAAQAAQAFAAAAAAARAA8AAgADAAIAAAASAA8AAgADAAIAAAATAA8AAgADAAIAAAAUAA8AAgADAAIAAAAVAA8AAgADAAIAAAAWAA8AAgADAAIAAAAXAA8AAgADAAIAAAAYAA8AAgADAAIAAAAZAA8AAgADAAIAAAAaAA8AAgADAAIAAAAbAA8AAgADAAIAAAAcAA8AAgADAAIAAAAdAA8AAgADAAIAAAAeAA8AAgADAAIAAAAfAA8AAgADAAIAAAAgAA8AAgADAAIAAAAhAA8AAgADAAIAAAAiAA8AAgADAAIAAAAjAA8AAgADAAIAAAAkAA8AAgADAAIAAAAnAA8AAQAAAAUAAAAoAA8AAQABAAUAAAApAA8AAQACAAUAAAAgABwAAgAGAAAAAAAgAB0AAgAGAAEAAAAhABwAAgAHAAAAAAAhAB0AAgAHAAEAAAAEACAAAgAEAAQAAAAEACEAAgAEAAUAAAAFACAAAgAFAAQAAAAFACEAAgAFAAUAAAAGACAAAgAGAAQAAAAGACEAAgAGAAUAAAAHACAAAgAHAAQAAAAHACEAAgAHAAUAAAAIACAAAgAGAAQAAAAIACEAAgAGAAUAAAAJACAAAgAHAAQAAAAJACEAAgAHAAUAAAAKACAAAgAGAAQAAAAKACEAAgAGAAUAAAALACAAAgAHAAQAAAALACEAAgAHAAUAAAAMACAAAgAGAAQAAAAMACEAAgAGAAUAAAANACAAAgAHAAQAAAANACEAAgAHAAUAAAAOACAAAgAGAAQAAAAOACEAAgAGAAUAAAAPACAAAgAHAAQAAAAPACEAAgAHAAUAAAAQACAAAgAGAAQAAAAQACEAAgAGAAUAAAARACAAAgAHAAQAAAARACEAAgAHAAUAAAASACAAAgAGAAQAAAASACEAAgAGAAUAAAATACAAAgAHAAQAAAATACEAAgAHAAUAAAAUACAAAgAGAAQAAAAUACEAAgAGAAUAAAAVACAAAgAHAAQAAAAVACEAAgAHAAUAAAAWACAAAgAGAAQAAAAWACEAAgAGAAUAAAAXACAAAgAHAAQAAAAXACEAAgAHAAUAAAAYACAAAgAGAAQAAAAYACEAAgAGAAUAAAAZACAAAgAHAAQAAAAZACEAAgAHAAUAAAAaACAAAgAGAAQAAAAaACEAAgAGAAUAAAAbACAAAgAHAAQAAAAbACEAAgAHAAUAAAAcACAAAgAGAAQAAAAcACEAAgAGAAUAAAAdACAAAgAHAAQAAAAdACEAAgAHAAUAAAAeACAAAgAGAAQAAAAeACEAAgAGAAUAAAAfACAAAgAHAAQAAAAfACEAAgAHAAUAAAAgACAAAgAIAAQAAAAgACEAAgAIAAUAAAAhACAAAgAJAAQAAAAhACEAAgAJAAUAAAABACAAAgAJAAAAAAABACEAAgAJAAEAAAABAB4AAgAJAAAAAAABAB8AAgAJAAEAAAABABwAAgAJAAAAAAABAB0AAgAJAAEAAAABABoAAgAJAAAAAAABABsAAgAJAAEAAAABABgAAgAJAAAAAAABABkAAgAJAAEAAAABABcAAgAJAAEAAAABABQAAgAJAAAAAAABABUAAgAJAAEAAAABABIAAgAJAAAAAAABABMAAgAJAAEAAAABABAAAgAJAAAAAAABABEAAgAJAAEAAAA6AAAAAQADAAIAAAA5AAAAAQADAAIAAAA4AAAAAQADAAIAAAA3AAAAAQADAAIAAAA2AAAAAQADAAIAAAA1AAAAAQADAAIAAAA0AAAAAQADAAIAAAAzAAAAAQADAAIAAAAyAAAAAQADAAIAAAAxAAAAAQADAAIAAAAwAAAAAQADAAIAAAAvAAAAAQADAAIAAAAuAAAAAQADAAIAAAAtAAAAAQADAAIAAAAsAAAAAQADAAIAAAArAAAAAQADAAIAAAAqAAAAAQADAAIAAAApAAAAAQADAAIAAAAoAAAAAQADAAIAAAAnAAAAAQADAAIAAAAmAAAAAQADAAIAAAAlAAAAAQADAAIAAAAkAAAAAQADAAIAAAAjAAAAAQADAAIAAAAiAAAAAQADAAIAAAAhAAAAAQADAAIAAAAgAAAAAQADAAIAAAAfAAAAAQADAAIAAAAeAAAAAQADAAIAAAAdAAAAAQADAAIAAAAcAAAAAQADAAIAAAAbAAAAAQADAAIAAAAaAAAAAQADAAIAAAAZAAAAAQADAAIAAAAYAAAAAQADAAIAAAAXAAAAAQADAAIAAAAWAAAAAQADAAIAAAAVAAAAAQADAAIAAAAUAAAAAQADAAIAAAATAAAAAQADAAIAAAASAAAAAQADAAIAAAARAAAAAQADAAIAAAAQAAAAAQADAAIAAAAPAAAAAQADAAIAAAAOAAAAAQADAAIAAAANAAAAAQADAAIAAAAMAAAAAQADAAIAAAALAAAAAQADAAIAAAAKAAAAAQADAAIAAAAJAAAAAQADAAIAAAAIAAAAAQADAAIAAAAHAAAAAQADAAIAAAAGAAAAAQADAAIAAAAFAAAAAQADAAIAAAAEAAAAAQADAAIAAAADAAAAAQADAAIAAAACAAAAAQADAAIAAAABAAAAAQADAAIAAAApABcAAQAAAAIAAAArACAAAQAGAAAAAAAsACAAAQAHAAAAAAAtACAAAQAGAAAAAAAuACAAAQAHAAAAAAAvACAAAQAGAAAAAAAwACAAAQAHAAAAAAAxACAAAQAGAAAAAAAyACAAAQAHAAAAAAAMAAUAAQAAAAEAAAANAAUAAQABAAEAAAAOAAUAAQACAAEAAAAPAAUAAQADAAEAAAAQAAUAAQAEAAEAAAARAAUAAQAFAAEAAAAqABcAAQACAAIAAAAuAB4AAQAGAAAAAAAuAB8AAQAGAAEAAAAvAB4AAQAHAAAAAAAvAB8AAQAHAAEAAAAwABQAAQAAAAQAAAAwABUAAQAAAAUAAAAxABQAAQACAAQAAAAxABUAAQACAAUAAAA=")
tile_set = ExtResource("2_jps58")

[node name="RotateableObjectPlatform" parent="." instance=ExtResource("2_7kl1c")]
position = Vector2(1217, 317)
mass = 10.0
linear_velocity = Vector2(0, 0)

[node name="Goal_P1" parent="." instance=ExtResource("3_ktvul")]
position = Vector2(640, 800)

[node name="Goal_P2" parent="." instance=ExtResource("3_ktvul")]
position = Vector2(480, 96)

[node name="Player" parent="." instance=ExtResource("4_lrn0a")]
position = Vector2(840, 770)

[node name="Player2" parent="." instance=ExtResource("4_lrn0a")]
position = Vector2(1855, 802)
playerOne = false

[node name="Player1Marker" type="Marker2D" parent="."]
position = Vector2(840, 770)

[node name="Player2Marker" type="Marker2D" parent="."]
position = Vector2(1855, 802)

[node name="SFX" type="Node" parent="."]

[node name="goal_hit" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_hide0")

[node name="goal_leave" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_ptr4y")

[node name="level_win" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("8_7l7hh")

[node name="lose_a_life" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("9_5qh7t")

[node name="whacked" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("10_ufqs0")

[node name="RestartTimer" type="Timer" parent="."]

[node name="deathPits" type="Node" parent="."]

[node name="Pitfall2" parent="deathPits" instance=ExtResource("11_hfmx7")]
position = Vector2(224, 428)

[node name="Pitfall3" parent="deathPits" instance=ExtResource("11_hfmx7")]
position = Vector2(96, 428)

[connection signal="finished" from="SFX/whacked" to="." method="_on_whacked_finished"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
